crates/rudolint-cli/tests/snapshots/cli__fix_write_mode_applied_file.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: once
---
# syntax=docker/dockerfile:1
FROM alpine:3.20
RUN --mount=type=cache,target=/tmp/cache echo ok
