crates/rudolint-cli/tests/snapshots/cli__fix_write_mode_human.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
$TEMP/Dockerfile:1:1: warning RDL3007 avoid mutable latest base image tags
$TEMP/Dockerfile:2:1: error RDL3000 WORKDIR should be absolute
fixes: write mode is enabled; no fixes are currently available
