crates/rudolint-cli/tests/snapshots/cli__fix_write_mode_maintainer_file.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
FROM alpine:3.20
LABEL org.opencontainers.image.authors="ops@example.com"
