crates/rudolint-cli/tests/snapshots/cli__fix_write_mode_maintainer_nonrewritable_file.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
FROM alpine:3.20
MAINTAINER "bad@example.com
MAINTAINER bad\user@example.com
MAINTAINER 
