crates/rudolint-cli/tests/snapshots/cli__fix_write_mode_migrate_hadolint_ignores_file.snap
---
source: crates/rudolint-cli/tests/cli.rs
assertion_line: 854
expression: output
---
# rudolint ignore=DL3007, SC2086
FROM alpine:latest
RUN echo ok # hadolint ignore=SC2086
