crates/rudolint-cli/tests/snapshots/cli__multi_file_json_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
{
  "findings": [
    {
      "code": "RDL3007",
      "help": null,
      "labels": [],
      "message": "avoid mutable latest base image tags",
      "path": "$TEMP/Dockerfile",
      "primary_span": {
        "end_byte": 18,
        "end_column": 19,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "severity": "warning"
    },
    {
      "code": "RDL3006",
      "help": null,
      "labels": [],
      "message": "base image should use an explicit tag or digest",
      "path": "$TEMP/Dockerfile.api",
      "primary_span": {
        "end_byte": 12,
        "end_column": 13,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "severity": "warning"
    },
    {
      "code": "RDL3000",
      "help": null,
      "labels": [],
      "message": "WORKDIR should be absolute",
      "path": "$TEMP/Dockerfile.api",
      "primary_span": {
        "end_byte": 24,
        "end_column": 12,
        "end_line": 2,
        "start_byte": 13,
        "start_column": 1,
        "start_line": 2
      },
      "severity": "error"
    }
  ],
  "schemaVersion": "v1"
}
