crates/rudolint-cli/tests/snapshots/cli__multi_file_sarif_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "$TEMP/Dockerfile"
                },
                "region": {
                  "endColumn": 19,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "avoid mutable latest base image tags"
          },
          "ruleId": "RDL3007"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "$TEMP/Dockerfile.api"
                },
                "region": {
                  "endColumn": 13,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "base image should use an explicit tag or digest"
          },
          "ruleId": "RDL3006"
        },
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "$TEMP/Dockerfile.api"
                },
                "region": {
                  "endColumn": 12,
                  "endLine": 2,
                  "startColumn": 1,
                  "startLine": 2
                }
              }
            }
          ],
          "message": {
            "text": "WORKDIR should be absolute"
          },
          "ruleId": "RDL3000"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/kubeply/rudolint",
          "name": "rudolint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "RDL3007",
              "shortDescription": {
                "text": "avoid mutable latest base image tags"
              }
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "RDL3006",
              "shortDescription": {
                "text": "base image should use an explicit tag or digest"
              }
            },
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "RDL3000",
              "shortDescription": {
                "text": "WORKDIR should be absolute"
              }
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
